--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,8 +6,13 @@ html {
 }
 
 body {
-    margin: 40px auto 40px auto;
+    margin: 40px auto;
     width: 680px;
+
+    @media (max-width: 768px) {
+        margin: 40px 8vw;
+        width: 84vw;
+    }
 }
 
 h1, h2, h3 {
@@ -21,7 +26,7 @@ h1, h2, h3 {
 
 h1, h2 {
     font-size: 40px;
-    line-height: 64px;
+    line-height: 52px;
     letter-spacing: -2.1px;
 }
 
@@ -58,6 +63,12 @@ li {
 }
 
 a {
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 40px;
     color: #090b14;    
     text-decoration: none;
     position: relative;
@@ -107,4 +118,23 @@ img {
     height: auto;
     border-radius: 8px;    
     box-shadow: 8px 8px 20px 0 rgba(0, 0, 0, 0.16);
+}
+
+.figma {
+    width: 100%;
+    height: 680px;
+    border: none;
+}
+
+.project-end {
+    border-top: 1px solid #6d7287;
+    margin-top: 40px;
+    padding-top: 24px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end; /* Alinha os itens à direita */
+
+    a:nth-of-type(1) {
+        margin-right: auto; /* Empurra o primeiro link para a esquerda */
+    }
 }
