--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -68,49 +68,25 @@ a {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    text-decoration: none;
     font-size: 24px;
     line-height: 40px;
-    color: #090b14;    
-    text-decoration: none;
+    color: #1A8917;
     position: relative;
     display: flex;
     border-radius: 8px;
+    transition: color 0.2s ease-in-out;
     
-    &::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 2px;
-      background-color: currentColor;
-      transform: scaleX(0);
-      transform-origin: bottom right;
-      transition: transform 0.3s ease-in-out;
-    }
-  
-    &:hover::after {
-      transform: scaleX(1);
-      transform-origin: bottom left;
-      transition: transform 0.3s ease-in;
-    }
-  
-    &:not(:hover)::after {
-      transition: transform 0s ease-out;
+    &:hover {
+        color: #090b14;
     }
     
     &:has(> img) {
-        &::after {
-            content: none;
-        }
-
-        & {      
-            transition: transform 0.3s ease-in-out;
+        & {
             transition: box-shadow 0.3s ease-in-out;
         }
 
         &:hover {
-            transform: scale(1.00);
             box-shadow: 0 10px 30px rgb(206, 209, 224);
         }
     }
