--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,10 +1,14 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
 
 $font-gray: hsl(228, 12%, 32%);
 $font-black: hsl(228, 12%, 12%);
 $font-link: hsl(216, 100%, 40%);
+
+$mobile: 768px;
+$tablet: 992px;
+$desktop: 1200px;
 
 html {
     scroll-behavior: smooth;
@@ -15,7 +19,7 @@ body {
     margin: 40px auto;
     width: 680px;
     
-    @media (max-width: 768px) {
+    @media (max-width: $mobile) {
         margin: 40px 24px;
         width: calc(100% - 48px);
     }
@@ -26,13 +30,22 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    color: $font-gray;
     font-size: 24px;
     line-height: 40px;
 }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 200,
+  'GRAD' 0,
+  'opsz' 24;
+  line-height: inherit;
+  font-size: 32px;
+}
+
 h1, h2, h3 {
-    margin-bottom: 16px;
+    margin-bottom: 0;
     font-family: "DM Serif Display", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
@@ -50,12 +63,13 @@ h2 {
 }
 
 h3 {    
-    font-size: 28px;
-    line-height: 46px;
+    font-size: 40px;
+    line-height: 50px;
 }
 
 p {
     margin-top: 0;
+    color: $font-gray;
 }
 
 strong {
@@ -65,9 +79,11 @@ strong {
 
 li {
     list-style-type: circle;
+    color: $font-gray;
 }
 
 a {
+    text-decoration: none;
     position: relative;
     display: flex;
     border-radius: 8px;
@@ -89,9 +105,8 @@ a {
         }
     }
 
-    svg {
-        margin: 4px 8px 0 0;
-        transition: fill 0.2s ease-in-out;
+    span {
+        margin-right: 8px;
     }
 }
 
@@ -107,15 +122,29 @@ img {
     border: none;
 }
 
-.project-end {
-    border-top: 1px solid $font-gray;
+
+.project-nav-start {
+    @media (min-width: $tablet) {
+        position: fixed;
+        left: 40px;
+    }
+}
+
+.project-nav-end {
     margin-top: 40px;
     padding-top: 24px;
     width: 100%;
     display: flex;
     justify-content: flex-end; /* Alinha os itens à direita */
+    border-top: 1px solid $font-gray;
 
     a:nth-of-type(1) {
         margin-right: auto; /* Empurra o primeiro link para a esquerda */
     }
+}
+
+.social {
+    width: 88%;
+    display: inline-flex;
+    justify-content: space-between;
 }
