Removida a pasta "content", melhorias no conteúdo.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -54,9 +54,12 @@ h1, h2, h3 {
 }
 
 h1, h2 {
-    margin-top: 200px;
     font-size: 52px;
     line-height: 60px;
+}
+
+h2 {    
+    margin-top: 200px;
 }
 
 h3 {    
