--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
 
-$font-gray: hsl(228, 12%, 32%);
+$font-light-gray: #6e748c;
+$font-dark-gray: hsl(228, 12%, 32%);
 $font-black: hsl(228, 12%, 12%);
 $font-link: hsl(216, 100%, 40%);
 
@@ -31,7 +32,6 @@ body {
     font-weight: 400;
     font-style: normal;
     font-size: 24px;
-    line-height: 40px;
 }
 
 .material-symbols-outlined {
@@ -58,10 +58,6 @@ h1, h2 {
     line-height: 60px;
 }
 
-h2 {    
-    margin-top: 200px;
-}
-
 h3 {    
     font-size: 40px;
     line-height: 50px;
@@ -69,7 +65,21 @@ h3 {
 
 p {
     margin-top: 0;
-    color: $font-gray;
+    line-height: 40px;
+    color: $font-dark-gray;
+}
+
+small {
+    margin-top: -24px;
+    font-size: 16px;
+    font-style: italic;
+    color: $font-light-gray;
+}
+
+mark {
+    background-color: $font-dark-gray;
+    color: #fff;
+    padding: 0 4px;
 }
 
 strong {
@@ -79,7 +89,8 @@ strong {
 
 li {
     list-style-type: circle;
-    color: $font-gray;
+    color: $font-dark-gray;
+    line-height: 40px;
 }
 
 a {
@@ -87,6 +98,7 @@ a {
     position: relative;
     display: flex;
     border-radius: 8px;
+    line-height: 40px;
     color: $font-black;
     transition: color 0.2s ease-in-out;
     
@@ -116,6 +128,10 @@ img {
     border-radius: 8px;    
 }
 
+hr {
+    margin: 80px 0;
+}
+
 .figma {
     width: 100%;
     height: 680px;
@@ -136,7 +152,7 @@ img {
     width: 100%;
     display: flex;
     justify-content: flex-end; /* Alinha os itens à direita */
-    border-top: 1px solid $font-gray;
+    border-top: 1px solid $font-dark-gray;
 
     a:nth-of-type(1) {
         margin-right: auto; /* Empurra o primeiro link para a esquerda */
