Reorganização dos arquivos, troca de project por case e adição dos outros 2 cases.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -139,14 +139,14 @@ hr {
 }
 
 
-.project-nav-start {
+.nav-start {
     @media (min-width: $tablet) {
         position: fixed;
         left: 40px;
     }
 }
 
-.project-nav-end {
+.nav-end {
     margin-top: 40px;
     padding-top: 24px;
     width: 100%;
