--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,10 +27,13 @@ html {
 }
 
 section {
-  @apply min-h-screen;
+  @apply min-h-screen flex flex-col items-center justify-center;
 }
 
 @layer components {
+  .chip {
+    @apply inline-flex items-center px-3 py-1 rounded-full text-sm font-light border border-blue-900 text-blue-100 bg-slate-900;
+  }
   .content-container {
     @apply max-w-[1440px] w-full mx-auto px-6;
   }
