--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,14 +38,15 @@ section {
     border border-slate-800
   ;}
   
-  .case-card{ @apply
+  .case-card { @apply
     flex flex-row items-center p-12 
     font-light text-white
-    border rounded-lg border-slate-700
-    bg-slate-900 shadow-2xl
-    hover:shadow-blue-900/10  hover:border-blue-900 hover:bg-slate-950
-    transition duration-300 ease-in-out 
+    border rounded-lg border-slate-400
+    bg-slate-900
+    hover:shadow-blue-900/70 shadow-2xl hover:border-blue-900 hover:bg-slate-950 hover:!text-slate-400
+    transition duration-300 ease-in-out
   ;}
+
   .case-title {
     @apply font-bold text-xl;
   }
