--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,14 +23,21 @@
 }
 
 html {
-  @apply scroll-smooth;
+  @apply scroll-smooth bg-slate-950;
+}
+
+main {
+  @apply container mx-auto md:px-20;
 }
 
 section {
-  @apply min-h-screen flex flex-col items-center justify-center;
+  @apply h-screen flex flex-col items-center justify-center;
 }
 
 @layer components {
+  .title { @apply
+    text-7xl font-medium text-slate-50 mb-2
+  ;}
   .chip { @apply
     inline-flex items-center px-3 py-1
     text-sm font-normal text-slate-400
@@ -39,27 +46,19 @@ section {
   ;}
   
   .case-card { @apply
-    flex flex-row items-center p-12 
+    flex flex-col w-1/2 p-10 items-center space-y-10
     font-light text-white
-    border rounded-lg border-slate-400
+    border rounded-lg border-blue-400 shadow-blue-900/40
     bg-slate-900
-    hover:shadow-blue-900/70 shadow-2xl hover:border-blue-900 hover:bg-slate-950 hover:!text-slate-400
+    shadow-2xl hover:shadow-slate-900/70 hover:border-white hover:bg-slate-950 hover:opacity-40 hover:outline-2
     transition duration-300 ease-in-out
   ;}
 
-  .case-title {
-    @apply font-bold text-xl;
-  }
-  .case-button {
-    @apply inline-flex items-center mt-4 px-4 py-2 rounded-lg text-base font-medium border border-slate-400 text-slate-200; 
-  }
+  .case-title { @apply
+    mb-1 font-bold text-2xl w-full
+  ;}
 
-
-  .content-container {
-    @apply max-w-[1440px] w-full mx-auto px-6;
-  }
-
-  .btn-primary {
-    @apply px-4 py-2 bg-green-800 text-white rounded hover:bg-green-900 hover:text-white transition-colors duration-200 ease-in;
+  .underline-blue {
+    @apply underline decoration-2 decoration-blue-500;
   }
 }
