--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,9 @@
 }
 
 html {
-  @apply scroll-smooth bg-slate-950;
+  @apply scroll-smooth;
+  background-image: linear-gradient(#111827 1.1px, transparent 1.1px), linear-gradient(to right, #111827 1.1px, #030712 1.1px);
+  background-size: 24px 24px;
 }
 
 main {
@@ -46,11 +48,10 @@ section {
   ;}
   
   .case-card { @apply
-    flex flex-col w-1/2 p-10 items-center space-y-10
+    flex flex-col w-1/2 p-10 items-center space-y-10 
     font-light text-white
     border rounded-lg border-blue-400 shadow-blue-900/40
-    bg-slate-900
-    shadow-2xl hover:shadow-slate-900/70 hover:border-white hover:bg-slate-950 hover:opacity-40 hover:outline-2
+    shadow-2xl hover:shadow-slate-100/40 hover:border-white	hover:bg-gray-950/75 hover:outline-2
     transition duration-300 ease-in-out
   ;}
 
