--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,6 +60,10 @@ section {
   ;}
 
   .underline-blue {
-    @apply underline decoration-2 decoration-blue-500;
-  }
+    @apply underline decoration-2 decoration-blue-500
+  ;}
+  
+  .about-link {
+    @apply w-fit flex fill-white hover:fill-blue-500 hover:text-blue-500 transition duration-300 ease-in-out
+  ;}
 }
