--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@ main {
 }
 
 section {
-  @apply h-screen flex flex-col items-center justify-center;
+  @apply min-h-screen flex flex-col items-center justify-center;
 }
 
 @layer components {
