--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,47 +23,59 @@
 }
 
 html {
-  @apply scroll-smooth;
-  background-image: linear-gradient(#111827 1.1px, transparent 1.1px), linear-gradient(to right, #111827 1.1px, #030712 1.1px);
-  background-size: 24px 24px;
+  @apply scroll-smooth bg-zinc-950
 }
 
 main {
-  @apply container mx-auto md:px-20;
+  @apply container mx-auto md:px-20
 }
 
 section {
-  @apply min-h-screen flex flex-col items-center justify-center;
+  @apply min-h-screen flex flex-col items-center justify-center
 }
 
 @layer components {
   .title { @apply
-    text-7xl font-medium text-slate-50 mb-2
-  ;}
+    text-7xl font-medium text-zinc-50 mb-2
+  }
+  
   .chip { @apply
     inline-flex items-center px-3 py-1
-    text-sm font-normal text-slate-400
+    text-sm font-normal text-zinc-300
     rounded-full
-    border border-slate-800
-  ;}
+    border border-emerald-700 
+    shadow-2xl shadow-emerald-500/40
+  }
   
   .case-card { @apply
     flex flex-col w-1/2 p-10 items-center space-y-10 
     font-light text-white
-    border rounded-lg border-blue-400 shadow-blue-900/40
-    shadow-2xl hover:shadow-slate-100/40 hover:border-white	hover:bg-gray-950/75 hover:outline-2
-    transition duration-300 ease-in-out
-  ;}
+    border rounded-2xl border-zinc-400 hover:border-emerald-500
+    shadow-2xl shadow-zinc-500/40 hover:shadow-emerald-500/40
+    hover:opacity-75 transition duration-300 ease-in-out
+  }
 
   .case-title { @apply
     mb-1 font-bold text-2xl w-full
-  ;}
+  }
 
   .underline-blue {
     @apply underline decoration-2 decoration-blue-500
-  ;}
+  }
+
+  .underline-emerald {
+    @apply underline decoration-2 decoration-emerald-500
+  }
   
-  .about-link {
-    @apply w-fit flex fill-white hover:fill-blue-500 hover:text-blue-500 transition duration-300 ease-in-out
-  ;}
+  .btn-link {
+    @apply 
+    w-fit flex
+    text-xl underline decoration-0 underline-offset-8 hover:text-emerald-500
+    fill-white hover:fill-emerald-500
+    transition duration-300 ease-in-out
+  }
+
+  .btn-link svg {
+    @apply w-[32px] h-[32px]
+  }
 }
