--- a/src/app/posgraduate.css
+++ b/src/app/posgraduate.css
@@ -4,10 +4,10 @@ body {
 
 mark {
   @apply
-  bg-teal-950
+  bg-yellow-700
 }
 
 .btn-link {
   @apply
-  hover:text-teal-500 hover:fill-teal-500
+  hover:text-yellow-500 hover:fill-yellow-500
 }
