--- a/src/app/mdx.css
+++ b/src/app/mdx.css
@@ -1,35 +1,40 @@
 main {
   @apply
-  w-[800px] px-0 py-20 text-white
+  px-0 py-20 text-white
 }
 
 hr {
   @apply
-  my-10
+  my-10 m-auto
+  w-[800px]
   border-slate-500
 }
 
 h1 {
   @apply
-  mb-10
+  mb-10 m-auto
+  w-[800px]
   text-7xl
 }
 
 h2 {
   @apply
-  mb-5
+  mb-5 m-auto
+  w-[800px]
   text-2xl font-bold
 }
 
 p {
   @apply
-  mb-5
+  mb-5 m-auto
+  w-[800px]
   text-xl font-light
 }
 
 ul {
   @apply
-  pl-5
+  pl-5 m-auto
+  w-[800px]
 }
 
 li {
@@ -51,7 +56,8 @@ mark {
 
 figure {
   @apply
-  pb-10
+  my-10 m-auto
+  max-w-[800px]
 }
 
 figure img {
@@ -66,6 +72,31 @@ figcaption {
 
 footer {
   @apply
-  pt-10
+  mt-10 pt-10 m-auto
+  w-[800px]
   border-t border-slate-500
+}
+
+.case-images {
+  @apply 
+  m-auto
+  w-fit
+  grid grid-flow-col auto-cols-max gap-x-8
+  transition duration-300 ease-in-out
+}
+
+.case-images figure {
+  @apply
+  h-[600px]
+}
+
+.case-images figcaption {
+  @apply font-light	text-zinc-400
+}
+
+.case-images img {
+  @apply
+  h-full
+  border rounded-2xl border-zinc-900
+  hover:scale-125 transition duration-300 ease-in-out
 }
