--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 }
 
 html {
-  @apply scroll-smooth
+  @apply scroll-smooth !will-change-contents !antialiased
 }
 
 section {
@@ -59,7 +59,7 @@ section {
 
   .case-button { @apply
     rounded-full py-2 px-4
-    font-light text-white
+    font-medium text-white
     shadow-2xl shadow-neutral-500/40
     hover:opacity-75 transition duration-300 ease-in-out
   }
