melhorias no estilo dos cases

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,7 +46,7 @@ section {
   
   .chip { @apply
     inline-flex items-center px-3 py-1
-    text-xs font-light text-zinc-200 uppercase
+    text-xs font-medium text-zinc-200 uppercase
     rounded-full
     border border-zinc-300
   }
