ajustes de estilo e conteúdo

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 }
 
 html {
-  @apply scroll-smooth !will-change-contents !antialiased
+  @apply scroll-smooth !will-change-contents !antialiased overflow-x-hidden
 }
 
 section {
@@ -33,15 +33,18 @@ section {
 @layer components {
   .navbar-link { @apply
     inline-flex items-center
-    hover:opacity-70 transition duration-300
+    hover:text-green-800 transition duration-300
   }
 
   .navbar-link svg {
-    @apply mr-1 size-4
+    @apply
+    mr-2 p-1 size-7
+    rounded-md bg-green-200
   }  
 
   .title { @apply
-    text-6xl font-medium text-zinc-50 mb-2
+    mb-2
+    text-6xl font-bold tracking-[-0.015em] leading-tight
   }
   
   .chip { @apply
@@ -49,27 +52,6 @@ section {
     text-xs font-medium text-zinc-200 uppercase
     rounded-full
     border border-zinc-300
-  }
-  
-  .case-section { @apply
-    flex flex-col w-full p-10 items-center space-y-10
-    font-light text-white
-    bg-slate-950
-  }
-
-  .case-button { @apply
-    rounded-full py-2 px-4
-    font-medium text-white
-    shadow-2xl shadow-neutral-500/40
-    hover:opacity-75 transition duration-300 ease-in-out
-  }
-
-  .case-title { @apply
-    mb-1 font-bold text-2xl w-full
-  }
-
-  .underline-blue {
-    @apply underline decoration-2 decoration-blue-500
   }
   
   .btn-link {
@@ -82,5 +64,44 @@ section {
 
   .btn-link svg {
     @apply w-[32px] h-[32px]
+  }
+
+  .button-primary { @apply
+    mt-4 py-2 px-4 block w-fit
+    rounded-full
+    font-medium text-white
+    hover:brightness-110 transition duration-300 ease-in-out
+  }
+  
+  .case-section { @apply
+    container mx-auto
+    h-screen pt-24 grid gap-16 overflow-y-clip
+    font-normal
+  }
+
+  .case-screens { @apply    
+    grid grid-flow-col gap-10
+  }
+  
+  .case-screens img { @apply
+    shadow-2xl shadow-neutral-800/20
+    border rounded-2xl border-white/10
+    hover:scale-105 hover:border-neutral-400/40
+    transition duration-300 ease-in-out
+  }
+  
+  .case-title { @apply
+    mb-4 font-semibold text-6xl w-full
+  }
+
+  .underline-blue {
+    @apply underline decoration-2 decoration-blue-500
+  }
+
+  .umbrella-cards {
+    @apply
+    p-8 rounded-2xl
+    border border-green-900/5
+    shadow-xl shadow-green-900/10
   }
 }
