--- a/src/app/re-enrollment/style.css
+++ b/src/app/re-enrollment/style.css
@@ -1,20 +1,25 @@
 body {
   @apply
-  bg-teal-50 text-teal-950
+  bg-gradient-to-tr from-emerald-50 via-blue-100 to-amber-50 text-emerald-950
 }
 
 mark {
   @apply
-  bg-emerald-800
+  bg-blue-200
 }
 
 .btn-link {
   @apply
-  fill-teal-950
-  hover:text-emerald-500 hover:fill-emerald-500
+  fill-emerald-950
+  hover:text-emerald-600 hover:fill-emerald-600
 }
 
 figure img {
   @apply
-  shadow-teal-900/20
+  shadow-emerald-900/20
+}
+
+.project-cards li {
+  @apply
+  bg-opacity-5 bg-black
 }
