--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,11 @@ section {
 }
 
 @layer components {
+  .bg-noise {
+    background-image: url(/noise.svg), linear-gradient(to top right, var(--tw-gradient-from), var(--tw-gradient-stops), var(--tw-gradient-to));
+    background-blend-mode: multiply;
+  }
+  
   .navbar-link { @apply
     inline-flex items-center
     hover:text-green-800 transition duration-300
@@ -69,8 +74,8 @@ section {
   .button-primary { @apply
     py-2 px-4 w-fit flex space-x-4 h-fit
     rounded-full border
-    font-medium text-white
-    hover:brightness-110
+    font-medium align-middle text-white
+    hover:scale-105 hover:space-y-2
     transition duration-300 ease-in-out
   }
 
@@ -81,7 +86,8 @@ section {
   .button-outline { @apply
     py-2 px-4 w-fit flex space-x-4 h-fit
     rounded-full border
-    font-medium
+    font-medium align-middle
+    hover:scale-105
     transition duration-300 ease-in-out
   }
 
