--- a/src/app/posgraduate/style.css
+++ b/src/app/posgraduate/style.css
@@ -1,6 +1,8 @@
 body {
   @apply
-  bg-gradient-to-tr from-stone-950 via-slate-900 to-slate-950 text-stone-50
+  from-stone-950 via-slate-900 to-slate-950 text-stone-50;
+  background-image: url(/noise.svg), linear-gradient(to top right, var(--tw-gradient-from), var(--tw-gradient-stops), var(--tw-gradient-to));
+  background-blend-mode: multiply;
 }
 
 mark {
